@@ -1,3 +1,8 @@
+Development Portal (2014-03-21 shi)
+==============================
+New branding reflected on site
+
+
 Country Tracker (2014-03-20 shi)
 ==============================
 No more inline styles for base.html
